fix: the navbar alignt

--- a/src/components/ui/Landing/NavBar/NavBar.css
+++ b/src/components/ui/Landing/NavBar/NavBar.css
@@ -27,7 +27,10 @@
 	width: 97%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
-
+.navbar.notScrolled {
+	width: 100%;
+	margin-top: 0;
+}
 .navbar .logo img{
     height: 60px;
     width: auto;
